antlr/PROYECTO/CSSParser.py
# Generated from CSS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSSParser ( Parser ):

    grammarFileName = "CSS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'@media'", 
                     "'@import'", "'@font-face'", "<INVALID>", "'!important'", 
                     "'and'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'{'", "'}'", "'('", "')'", 
                     "'['", "']'", "'::'", "':'", "';'", "','", "'.'", "'>'", 
                     "'+'", "'~'", "'*'", "'/'", "'-'", "'~='", "'|='", 
                     "'^='", "'$='", "'*='", "'='" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "WS", "AT_MEDIA", "AT_IMPORT", 
                      "AT_FONTFACE", "AT_KEYFRAMES", "IMPORTANT", "AND", 
                      "STRING", "HASH", "PERCENTAGE", "DIMENSION", "NUMBER", 
                      "IDENT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "COLONCOLON", "COLON", "SEMI", "COMMA", 
                      "DOT", "GT", "PLUS", "TILDE", "STAR", "SLASH", "MINUS", 
                      "TILDEEQ", "PIPEEQ", "CARETEQ", "DOLLAREQ", "STAREQ", 
                      "EQ" ]

    RULE_styleSheet = 0
    RULE_ruleSet = 1
    RULE_selectorList = 2
    RULE_selector = 3
    RULE_combinator = 4
    RULE_simpleSelector = 5
    RULE_selectorPart = 6
    RULE_elementName = 7
    RULE_classSelector = 8
    RULE_idSelector = 9
    RULE_attrSelector = 10
    RULE_attrOp = 11
    RULE_pseudoClass = 12
    RULE_pseudoElement = 13
    RULE_atRule = 14
    RULE_mediaRule = 15
    RULE_mediaQueryList = 16
    RULE_mediaQuery = 17
    RULE_importRule = 18
    RULE_fontFaceRule = 19
    RULE_keyframesRule = 20
    RULE_keyframeBlock = 21
    RULE_keyframeSelector = 22
    RULE_declaration = 23
    RULE_property = 24
    RULE_valueList = 25
    RULE_value = 26
    RULE_funcCall = 27
    RULE_funcContent = 28
    RULE_funcToken = 29

    ruleNames =  [ "styleSheet", "ruleSet", "selectorList", "selector", 
                   "combinator", "simpleSelector", "selectorPart", "elementName", 
                   "classSelector", "idSelector", "attrSelector", "attrOp", 
                   "pseudoClass", "pseudoElement", "atRule", "mediaRule", 
                   "mediaQueryList", "mediaQuery", "importRule", "fontFaceRule", 
                   "keyframesRule", "keyframeBlock", "keyframeSelector", 
                   "declaration", "property", "valueList", "value", "funcCall", 
                   "funcContent", "funcToken" ]

    EOF = Token.EOF
    COMMENT=1
    WS=2
    AT_MEDIA=3
    AT_IMPORT=4
    AT_FONTFACE=5
    AT_KEYFRAMES=6
    IMPORTANT=7
    AND=8
    STRING=9
    HASH=10
    PERCENTAGE=11
    DIMENSION=12
    NUMBER=13
    IDENT=14
    LBRACE=15
    RBRACE=16
    LPAREN=17
    RPAREN=18
    LBRACK=19
    RBRACK=20
    COLONCOLON=21
    COLON=22
    SEMI=23
    COMMA=24
    DOT=25
    GT=26
    PLUS=27
    TILDE=28
    STAR=29
    SLASH=30
    MINUS=31
    TILDEEQ=32
    PIPEEQ=33
    CARETEQ=34
    DOLLAREQ=35
    STAREQ=36
    EQ=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StyleSheetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSSParser.EOF, 0)

        def atRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSSParser.AtRuleContext)
            else:
                return self.getTypedRuleContext(CSSParser.AtRuleContext,i)


        def ruleSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSSParser.RuleSetContext)
            else:
                return self.getTypedRuleContext(CSSParser.RuleSetContext,i)


        def getRuleIndex(self):
            return CSSParser.RULE_styleSheet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStyleSheet" ):
                listener.enterStyleSheet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStyleSheet" ):
                listener.exitStyleSheet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStyleSheet" ):
                return visitor.visitStyleSheet(self)
            else:
                return visitor.visitChildren(self)




    def styleSheet(self):

        localctx = CSSParser.StyleSheetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_styleSheet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 577258616) != 0):
                self.state = 62
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 4, 5, 6]:
                    self.state = 60
                    self.atRule()
                    pass
                elif token in [10, 14, 19, 21, 22, 25, 29]:
                    self.state = 61
                    self.ruleSet()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(CSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleSetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectorList(self):
            return self.getTypedRuleContext(CSSParser.SelectorListContext,0)


        def LBRACE(self):
            return self.getToken(CSSParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CSSParser.RBRACE, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSSParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(CSSParser.DeclarationContext,i)


        def getRuleIndex(self):
            return CSSParser.RULE_ruleSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleSet" ):
                listener.enterRuleSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleSet" ):
                listener.exitRuleSet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleSet" ):
                return visitor.visitRuleSet(self)
            else:
                return visitor.visitChildren(self)




    def ruleSet(self):

        localctx = CSSParser.RuleSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ruleSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.selectorList()
            self.state = 70
            self.match(CSSParser.LBRACE)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 71
                self.declaration()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(CSSParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSSParser.SelectorContext)
            else:
                return self.getTypedRuleContext(CSSParser.SelectorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSSParser.COMMA)
            else:
                return self.getToken(CSSParser.COMMA, i)

        def getRuleIndex(self):
            return CSSParser.RULE_selectorList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectorList" ):
                listener.enterSelectorList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectorList" ):
                listener.exitSelectorList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectorList" ):
                return visitor.visitSelectorList(self)
            else:
                return visitor.visitChildren(self)




    def selectorList(self):

        localctx = CSSParser.SelectorListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_selectorList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.selector()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 80
                self.match(CSSParser.COMMA)
                self.state = 81
                self.selector()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleSelector(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSSParser.SimpleSelectorContext)
            else:
                return self.getTypedRuleContext(CSSParser.SimpleSelectorContext,i)


        def combinator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSSParser.CombinatorContext)
            else:
                return self.getTypedRuleContext(CSSParser.CombinatorContext,i)


        def getRuleIndex(self):
            return CSSParser.RULE_selector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelector" ):
                listener.enterSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelector" ):
                listener.exitSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelector" ):
                return visitor.visitSelector(self)
            else:
                return visitor.visitChildren(self)




    def selector(self):

        localctx = CSSParser.SelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.simpleSelector()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047020544) != 0):
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 469762048) != 0):
                    self.state = 88
                    self.combinator()


                self.state = 91
                self.simpleSelector()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CombinatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GT(self):
            return self.getToken(CSSParser.GT, 0)

        def PLUS(self):
            return self.getToken(CSSParser.PLUS, 0)

        def TILDE(self):
            return self.getToken(CSSParser.TILDE, 0)

        def getRuleIndex(self):
            return CSSParser.RULE_combinator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCombinator" ):
                listener.enterCombinator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCombinator" ):
                listener.exitCombinator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCombinator" ):
                return visitor.visitCombinator(self)
            else:
                return visitor.visitChildren(self)




    def combinator(self):

        localctx = CSSParser.CombinatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_combinator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 469762048) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleSelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectorPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSSParser.SelectorPartContext)
            else:
                return self.getTypedRuleContext(CSSParser.SelectorPartContext,i)


        def getRuleIndex(self):
            return CSSParser.RULE_simpleSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleSelector" ):
                listener.enterSimpleSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleSelector" ):
                listener.exitSimpleSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleSelector" ):
                return visitor.visitSimpleSelector(self)
            else:
                return visitor.visitChildren(self)




    def simpleSelector(self):

        localctx = CSSParser.SimpleSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simpleSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 99
                    self.selectorPart()

                else:
                    raise NoViableAltException(self)
                self.state = 102 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectorPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elementName(self):
            return self.getTypedRuleContext(CSSParser.ElementNameContext,0)


        def STAR(self):
            return self.getToken(CSSParser.STAR, 0)

        def classSelector(self):
            return self.getTypedRuleContext(CSSParser.ClassSelectorContext,0)


        def idSelector(self):
            return self.getTypedRuleContext(CSSParser.IdSelectorContext,0)


        def attrSelector(self):
            return self.getTypedRuleContext(CSSParser.AttrSelectorContext,0)


        def pseudoClass(self):
            return self.getTypedRuleContext(CSSParser.PseudoClassContext,0)


        def pseudoElement(self):
            return self.getTypedRuleContext(CSSParser.PseudoElementContext,0)


        def getRuleIndex(self):
            return CSSParser.RULE_selectorPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectorPart" ):
                listener.enterSelectorPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectorPart" ):
                listener.exitSelectorPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectorPart" ):
                return visitor.visitSelectorPart(self)
            else:
                return visitor.visitChildren(self)




    def selectorPart(self):

        localctx = CSSParser.SelectorPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selectorPart)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.elementName()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(CSSParser.STAR)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.classSelector()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.idSelector()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.attrSelector()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.pseudoClass()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.pseudoElement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(CSSParser.IDENT, 0)

        def getRuleIndex(self):
            return CSSParser.RULE_elementName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElementName" ):
                listener.enterElementName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElementName" ):
                listener.exitElementName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElementName" ):
                return visitor.visitElementName(self)
            else:
                return visitor.visitChildren(self)




    def elementName(self):

        localctx = CSSParser.ElementNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elementName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(CSSParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassSelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(CSSParser.DOT, 0)

        def IDENT(self):
            return self.getToken(CSSParser.IDENT, 0)

        def getRuleIndex(self):
            return CSSParser.RULE_classSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassSelector" ):
                listener.enterClassSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassSelector" ):
                listener.exitClassSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassSelector" ):
                return visitor.visitClassSelector(self)
            else:
                return visitor.visitChildren(self)




    def classSelector(self):

        localctx = CSSParser.ClassSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_classSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(CSSParser.DOT)
            self.state = 116
            self.match(CSSParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdSelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(CSSParser.HASH, 0)

        def getRuleIndex(self):
            return CSSParser.RULE_idSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdSelector" ):
                listener.enterIdSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdSelector" ):
                listener.exitIdSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdSelector" ):
                return visitor.visitIdSelector(self)
            else:
                return visitor.visitChildren(self)




    def idSelector(self):

        localctx = CSSParser.IdSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idSelector)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(CSSParser.HASH)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrSelectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(CSSParser.LBRACK, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(CSSParser.IDENT)
            else:
                return self.getToken(CSSParser.IDENT, i)

        def RBRACK(self):
            return self.getToken(CSSParser.RBRACK, 0)

        def attrOp(self):
            return self.getTypedRuleContext(CSSParser.AttrOpContext,0)


        def STRING(self):
            return self.getToken(CSSParser.STRING, 0)

        def getRuleIndex(self):
            return CSSParser.RULE_attrSelector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrSelector" ):
                listener.enterAttrSelector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrSelector" ):
                listener.exitAttrSelector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrSelector" ):
                return visitor.visitAttrSelector(self)
            else:
                return visitor.visitChildren(self)




    def attrSelector(self):

        localctx = CSSParser.AttrSelectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attrSelector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(CSSParser.LBRACK)
            self.state = 121
            self.match(CSSParser.IDENT)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 270582939648) != 0):
                self.state = 122
                self.attrOp()
                self.state = 123
                _la = self._input.LA(1)
                if not(_la==9 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 127
            self.match(CSSParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(CSSParser.EQ, 0)

        def TILDEEQ(self):
            return self.getToken(CSSParser.TILDEEQ, 0)

        def PIPEEQ(self):
            return self.getToken(CSSParser.PIPEEQ, 0)

        def CARETEQ(self):
            return self.getToken(CSSParser.CARETEQ, 0)

        def DOLLAREQ(self):
            return self.getToken(CSSParser.DOLLAREQ, 0)

        def STAREQ(self):
            return self.getToken(CSSParser.STAREQ, 0)

        def getRuleIndex(self):
            return CSSParser.RULE_attrOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrOp" ):
                listener.enterAttrOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrOp" ):
                listener.exitAttrOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrOp" ):
                return visitor.visitAttrOp(self)
            else:
                return visitor.visitChildren(self)




    def attrOp(self):

        localctx = CSSParser.AttrOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_attrOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 270582939648) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PseudoClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(CSSParser.COLON, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(CSSParser.IDENT)
            else:
                return self.getToken(CSSParser.IDENT, i)

        def LPAREN(self):
            return self.getToken(CSSParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CSSParser.RPAREN, 0)

        def NUMBER(self):
            return self.getToken(CSSParser.NUMBER, 0)

        def getRuleIndex(self):
            return CSSParser.RULE_pseudoClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPseudoClass" ):
                listener.enterPseudoClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPseudoClass" ):
                listener.exitPseudoClass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPseudoClass" ):
                return visitor.visitPseudoClass(self)
            else:
                return visitor.visitChildren(self)



